# 3D-engine-for-modeling-the-behavior-of-gas-molecules

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: particle.frag  particle.vert
include/: Application.hpp  Integrator.hpp  MathCore.hpp  Particle.hpp  Renderer.hpp  Shader.hpp  camera.hpp
include/glad/: gl.h
src/: Application.cpp  Camera.cpp  Integrator.cpp  MathCore.cpp  Particle.cpp  Renderer.cpp  Shader.cpp  main.cpp
